# bmstu-cg-coursework

./: .gitignore  CMakeLists.txt  README.md  consts.hpp  main.cpp  main.py  raytracer.cl
data/lights/: light1.txt  light2.txt  light3  light4
data/spheres/: sphere1.txt  sphere2.txt  sphere3.txt  sphere4.txt
docs/: ТЗ.docx
gui/qt/: design.h  mainwindow.cpp  mainwindow.h
gui/qt/drawer/: qt_drawer.cpp  qt_drawer.hpp
gui/qt/drawer/factory/: qt_drawer_factory.cpp  qt_drawer_factory.hpp
gui/qt/ui/: design.ui
implementation/: CMakeLists.txt
implementation/commands/: command.hpp
implementation/commands/camera/: camera_commands.cpp  camera_commands.hpp
implementation/commands/camera/add/: add_camera.cpp
implementation/commands/camera/count/: count_cameras.cpp  count_cameras.hpp
implementation/commands/camera/load/: load_camera.cpp
implementation/commands/camera/remove/: remove_camera.cpp
implementation/commands/light/: light_commands.cpp  light_commands.hpp
implementation/commands/model/: model_commands.cpp  model_commands.hpp
implementation/commands/model/add/: add_model.cpp
implementation/commands/model/count/: count_models.cpp  count_models.hpp
implementation/commands/model/load/: load_model.cpp
implementation/commands/model/remove/: remove_model.cpp
implementation/commands/model/rotate/: rotate_model.cpp
implementation/commands/scene/: scene_commands.cpp  scene_commands.hpp
implementation/config_manager/: config_manager.cpp  config_manager.hpp
implementation/config_manager/registration/: registration_maker.cpp
implementation/config_manager/solution/: solution.cpp  solution.hpp
implementation/drawer/: drawer.hpp
implementation/exceptions/: base_exception.hpp
implementation/load/builders/camera/: camera_builder.cpp
implementation/load/builders/model/: model_builder.cpp  model_builder.hpp
implementation/load/directors/: load_director.hpp
implementation/load/directors/camera/: camera_director.cpp  camera_director.hpp
implementation/load/directors/model/: model_director.cpp  model_director.hpp
implementation/load/loaders/: base_loader.hpp  loader_creator.hpp  loaders.cpp  loaders.hpp
implementation/load/loaders/base/: base_loader.cpp  base_loader.hpp
implementation/load/loaders/file_loader/: file_loader.cpp  file_loader.hpp
implementation/load/solutions/camera/: camera_load_solution.cpp  camera_load_solution.hpp
implementation/load/solutions/model/: model_load_solution.cpp  model_load_solution.hpp
implementation/managers/draw/: draw_manager.cpp  draw_manager.hpp
implementation/managers/load/: load_manager.cpp  load_manager.hpp
implementation/managers/scene/: scene_manager.cpp  scene_manager.hpp
implementation/managers/transform/: transform_manager.hpp
implementation/math/: linalg.cpp  linalg.hpp  rays.hpp  rays_handling.cpp  rays_handling.hpp
implementation/objects/: object.hpp
implementation/objects/camera/: camera.cpp  camera.hpp
implementation/objects/composite/: composite.cpp  composite.hpp
implementation/objects/light/: light.cpp  light.hpp
implementation/objects/material/: material.cpp  material.hpp
implementation/objects/model/: figure.cpp  figure.hpp  figure_data.cpp  figure_data.hpp  model.cpp  model.hpp  sphere.cpp  sphere.hpp  trismodel.cpp  trismodel.hpp
implementation/objects/model/model_details/point/: point.cpp
implementation/ray/: ray.cpp  ray.hpp
implementation/raytracer/: raytracer.cpp  raytracer.hpp
implementation/scene/: scene.cpp  scene.hpp
implementation/visitor/: visitor.hpp
implementation/visitor/draw_visitor/: draw_visitor.cpp  draw_visitor.hpp
implementation/visitor/raytracer_visitor/: raytracer_visitor.cpp  raytracer_visitor.hpp
